[package]
name = "fcm-service"
version = "0.2.0"
edition = "2021"
description = "A Rust library for sending Firebase Cloud Messaging (FCM) notifications"
license = "MIT"
repository = "https://github.com/real-ali/fcm-service"
documentation = "https://docs.rs/fcm-service"
keywords = ["fcm", "firebase", "notifications", "push"]
categories = ["api-bindings", "network-programming"]

[dependencies]
reqwest = { version = "^0", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["macros"] }
gcp_auth = "^0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "^3"
